[package]
name = "cfb_time_puller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.19.0" }
egui_extras = {version = "0.19.0", features = ["datepicker"]}
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
ehttp = "0.2.0"
chrono = "0.4.22"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
